# novacron

./: .env.example  .env.production  .env.template  .env.test  .gitignore  AGENTS.md  AGENT_29_QUICK_REFERENCE.txt  AI_ENGINE_DB_CONFIG_SUMMARY.md  AI_ENGINE_FIXES_SUMMARY.md  AI_ENGINE_IMPLEMENTATION_REPORT.md  AI_ENGINE_LEGACY_COMPATIBILITY_REPORT.md  AI_ENGINE_VERIFICATION_REPORT.md  AI_FALLBACK_IMPLEMENTATION_SUMMARY.md  API_INTEGRATION_IMPLEMENTATION_PROMPT.md  AUTHENTICATION_IMPLEMENTATION_PROMPT.md  AUTHENTICATION_IMPLEMENTATION_STATUS.md  BACKUP_SYSTEM_IMPLEMENTATION_REPORT.md  BENCHMARK_RESULTS_QUICK_REFERENCE.md  BLOCKCHAIN_PHASE5_COMPLETION.md  CLAUDE.md  CLAUDE_FLOW_ULTIMATE_SWARM_PROMPT.md  CLEANUP_FIXES.md  CLOUD_INTEGRATION_SUMMARY.md  CLOUD_PROVIDER_IMPLEMENTATION_PLAN.md  CLOUD_PROVIDER_REMOVAL_REPORT.md  CODE_MEMORY.md  COMPREHENSIVE_DEVELOPMENT_COMPLETION_REPORT.md  COMPREHENSIVE_DEVELOPMENT_SPRINT_REPORT.md  COMPREHENSIVE_E2E_TESTING_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_NOVACRON_TEST_REPORT.md  COMPREHENSIVE_TESTING_IMPLEMENTATION_REPORT.md  CRITICAL_PATH_IMPLEMENTATION_PLAN.md  CRUSH.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUCCESS_REPORT.md  DEVELOPMENT_COMPLETION_REPORT.md  DEVELOPMENT_COMPLETION_STATUS.md  DEVELOPMENT_COMPLETION_SUMMARY.md  DEVELOPMENT_PROGRESS_LATEST.md  (+139 more)
.augment/: rules.md
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl  last-touched  metadata.json  sync-state.json
.bmad-core/: install-manifest.yaml
.claude/: activate.sh  agents.json  config.json  ralph-loop.local.md  settings.json  settings.local.json
.codemap/: state.json
.githooks/: post-checkout
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.paul/: PROJECT.md  ROADMAP.md  STATE.md  config.md
.serena/: project.yml
.splits/: acli.exe.md5
.swarm/: memory.db  memory.db-shm  memory.db-wal  validation-matrix.yaml
advanced/: go.mod
ai-engine/: .env.example  Dockerfile  README.md  docker-compose.ai.yml  pyproject.toml  requirements.txt
ai-engine/ai_engine/: __init__.py  config.py
ai-engine/ai_engine/api/: main.py
ai-engine/ai_engine/core/: anomaly_detector.py  failure_predictor.py  resource_optimizer.py  workload_optimizer.py
ai-engine/ai_engine/models/: base.py
ai-engine/ai_engine/utils/: feature_engineering.py  logging.py  metrics.py
ai-engine/tests/: __init__.py  conftest.py  test_api.py
ai_engine/: WORKLOAD_CLASSIFICATION_FIX_SUMMARY.md  __init__.py  app.py  bandwidth_predictor.py  bandwidth_predictor_v3.py  lifetime_model_trainer.py  models.py  performance_optimizer.py  predictive_scaling.py  requirements.txt  test_bandwidth_predictor_v3.py  train_bandwidth_predictor_v3.py  workload_pattern_recognition.py
apparmor/: novacron-api  novacron-hypervisor  novacron-llm-engine
backend/: Dockerfile.test  coverage.out  docker-compose.test.yml
benchmark-results/: all_benchmarks_results.txt  analysis-summary.txt
certs/: novacron-cert.pem  novacron-key.pem
claudedocs/: AUTH_SYSTEM_INTEGRATION_REPORT.md  FINAL_VM_DRIVER_IMPLEMENTATION_REPORT.md  NOVACRON_SYSTEM_EVOLUTION_ROADMAP.md  PHASE1_2_AUDIT_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_EDGE_ARCHITECTURE.md  PHASE_2_EXPANSION_IMPLEMENTATION_SUMMARY.md  PHASE_3_INNOVATION_SUMMARY.md  Phase3_SDN_Networking_Research_Report.md  UI_UX_Analysis_Report.md  ai-powered-operations-architecture.md  architecture-optimization-recommendations.md  backend-compilation-analysis.md  breakthrough-features-integration-guide.md  code-improvement-implementation-summary.md  comprehensive-code-analysis-phase3.md  comprehensive-code-analysis-report.md  comprehensive-codebase-analysis-report.md  comprehensive-codebase-analysis.md  comprehensive_test_execution_report.md  data-architecture-strategy.md  frontend-audit-report.md  frontend-implementation-complete.md  hypervisor-capability-matrix.md  hypervisor-integration-research-phase2.md  hypervisor-performance-benchmarks.md  implementation-roadmap-master-plan.md  implementation-roadmap.md  integration-analysis-report.md  microservices-decomposition-blueprint.md  migration-path-analysis.md  network-performance-analysis.md  network-scalability-models.md  network-security-analysis.md  next-steps-summary.md  novacron-evolutionary-paths-research.md  phase1-infrastructure-analysis.md  phase2-hypervisor-integration-analysis.md  (+6 more)
cli/: DESIGN.md  README.md  go.mod  go.sum
community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
config/: dwcp-v3-datacenter.yaml  (+8 more)
sdk/rust/: Cargo.toml
sdk/rust/src/: error.rs  lib.rs
(+6251 files in other folders)
