[tool.poetry]
name = "novacron-ai"
version = "0.1.0"
description = "AI Engine for NovaCron VM Management"
authors = ["NovaCron Team"]
readme = "README.md"
packages = [{include = "ai_engine"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
tensorflow = "^2.13.0"
torch = "^2.0.0"
redis = "^5.0.0"
asyncio = "^3.4.3"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true